Update PWA comment to specify manifest file

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <!-- Main CSS -->
     <link rel="stylesheet" href="style.css">
 
-    <!-- PWA -->
+    <!-- PWA Manifest -->
     <link rel="manifest" href="manifest.json">
 </head>
 <body>
