--- a/index.html
+++ b/index.html
@@ -1,34 +1,34 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Air Quality Index</title>
-    <link rel="stylesheet" href="style.css">
-    <link rel="manifest" href="manifest.json">
-    <link rel="icon" href="favicon.ico">
-    <link rel="stylesheet" href="https://unpkg.com/leaflet/dist/leaflet.css" />
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Air Quality Index Dashboard</title>
+  <link rel="stylesheet" href="style.css">
+  <link rel="manifest" href="manifest.json">
+  <link rel="icon" href="favicon.ico">
+  <link rel="stylesheet" href="https://unpkg.com/leaflet/dist/leaflet.css" />
 </head>
 <body>
-    <header>
-        <h1>Air Quality Index (AQI) Dashboard</h1>
-        <button id="theme-toggle">Toggle Dark Mode</button>
-    </header>
+  <header>
+    <h1>Air Quality Index (AQI)</h1>
+    <button id="theme-toggle">Toggle Dark Mode</button>
+  </header>
 
-    <main>
-        <div id="map"></div>
-        <div id="info">
-            <h2>City Information</h2>
-            <div id="info-content">Click on a city marker to view AQI details.</div>
-        </div>
-    </main>
+  <main>
+    <div id="map"></div>
+    <div id="info">
+      <h2>City Information</h2>
+      <div id="info-content">Click on a city marker to view AQI details.</div>
+    </div>
+  </main>
 
-    <footer>
-        <p>Data from AQICN API. AI summaries generated using OpenRouter free models (gpt-3.5-mini).</p>
-        <p>Developed by Code Vibing & ChatGPT.</p>
-    </footer>
+  <footer>
+    <p>Data from AQICN API. AI summaries generated using OpenRouter free models (gpt-3.5-mini).</p>
+    <p>Developed by Code Vibing & ChatGPT.</p>
+  </footer>
 
-    <script src="https://unpkg.com/leaflet/dist/leaflet.js"></script>
-    <script src="app.js"></script>
+  <script src="https://unpkg.com/leaflet/dist/leaflet.js"></script>
+  <script src="app.js"></script>
 </body>
 </html>
